--- a/api-specification-parent/posts-api/pom.xml
+++ b/api-specification-parent/posts-api/pom.xml
@@ -23,7 +23,7 @@
 						</goals>
 
 						<configuration>
-							<inputSpec>D:\Subha\socialmediaapp\api-specification-parent\api\posts-api.yml</inputSpec>
+							<inputSpec>${project.basedir}/api/posts-api.yml</inputSpec>
 							<generatorName>spring</generatorName>
 							<generateApiTests>false</generateApiTests>
 							<modelPackage>com.socialmedia.posts.api.model</modelPackage>
