--- a/api-specification-parent/user-web-api/pom.xml
+++ b/api-specification-parent/user-web-api/pom.xml
@@ -24,7 +24,7 @@
 						</goals>
 
 						<configuration>
-							<inputSpec>D:\Subha\socialmediaapp\api-specification-parent\api\user-api.yml</inputSpec>
+							<inputSpec>${project.basedir}/api/user-api.yml</inputSpec>
 							<generatorName>spring</generatorName>
 							<generateApiTests>false</generateApiTests>
 							<modelPackage>com.socialmedia.user.api.model</modelPackage>
